force-app/main/default/objects/SendTaskDeleteEmail__c/SendTaskDeleteEmail__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is used to send emails when AgedTaskDeletion batch Executes</description>
    <label>SendTaskDeleteEmail</label>
</CustomObject>