force-app/main/default/objects/SendTaskDeleteEmail__c/fields/AgeingDays__c.field-meta.xml
<CustomField>
    <fullName>AgeingDays__c</fullName>
    <description>contains the ageing days which is used in agedTaskDeletion Batch class</description>
    <label>AgeingDays</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>