force-app/main/default/objects/SendTaskDeleteEmail__c/fields/includeArchivedRecords__c.field-meta.xml
<CustomField>
    <fullName>includeArchivedRecords__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It will decided whether to include the archived tasks or not</description>
    <label>includeArchivedRecords?</label>
    <type>Checkbox</type>
</CustomField>