force-app/main/default/objects/SendTaskDeleteEmail__c/fields/numberOfRecords__c.field-meta.xml
<CustomField>
    <fullName>numberOfRecords__c</fullName>
    <defaultValue>50000</defaultValue>
    <description>It holds the number of records that can be deleted per batch run. (limiting the records)</description>
    <label>numberOfRecords</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>