force-app/main/default/objects/SendTaskDeleteEmail__c/fields/toDate__c.field-meta.xml
<CustomField>
    <fullName>toDate__c</fullName>
    <description>Contains the date to  which the batch class to pull the records</description>
    <label>toDate</label>
    <type>Date</type>
</CustomField>